# arXiv_app

./: README.md
arXiv_app/: LICENSE  README.md  arxivtracker.py  pyproject.toml  requirements.txt  setup.py
arXiv_app/config/: api_config.json  categories.json  logging_config.json  system_config.json
arXiv_app/docker/: Dockerfile  docker-compose.yml
arXiv_app/docs/: api_reference.md  installation.md  maintenance.md  requirements.md  technical_design.md  user_manual.md
arXiv_app/examples/: basic_usage.py  custom_config.py  scheduled_task.py
arXiv_app/scripts/: check_abstract.py  extract_from_pdf.py  reset_states.py  setup_venv.py
arXiv_app/src/: __init__.py
arXiv_app/src/arxiv_tracker/: __init__.py  analyzer.py  cli.py  crawler.py  downloader.py  extractor.py  reporter.py
arXiv_app/src/arxiv_tracker/utils/: cache_manager.py  config.py  file_utils.py  logger.py  resource_monitor.py  state_manager.py
